# etherfi-expense-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analytics.py  bot.py  config.py  csv_import.py  db.py  docker-compose.yml  gui.py  main.py  notify.py  pyproject.toml  scraper.py
docs/: DISCORD_SETUP.md  SYSTEM_SETUP.md
scripts/: debug_scraper_dom.py
